*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.25 ===
* Bugfixes in shared memory catalog record validation.

=== 1.0.24 ===
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.23 ===
* Updated module versions in dependencies.

=== 1.0.22 ===
* Implemented shared catalog class.
* Implemented shared audio stream class.
* Updated module versions in dependencies.

=== 1.0.21 ===
* Implemented safer algorithm of loading sample when the underlying stream
  does not know the actual number of frames in the stream.
* Implemented dspu::Correlometer module.
* Optimized LFO sin-based and log-based functions.
* Fixed DynamicDelay buffer not cleaned up on initialization, garbage could be produced.
* Implemented dspu::RawRingBuffer which is better suitable for direct memory operations.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.20 ===
* Added Hold option to the dspu::Compressor module.
* Added Hold option to the dspu::Expander module.
* Added Hold option to the dspu::Gate module.
* Added Hold option to the dspu::DynamicProcessor module.
* Fixed RLC implementation of allpass filters.
* Added support of LR2 (12 dB/oct) filters by the Crossover.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.19 ===
* Refactoring and optimizations of the Expander module.
* Updated interface of the dspu::Sample, added gain function.
* Expander module now uses functions from lsp-dsp-lib for faster processing.
* Small optimizations and improvements of the dspu::Delay module.
* Added possibility to specify additional delay for each channel in dspu::Analzer module.
* Added dspu::hz_to_samples function.
* Added process_add methods for the dspu::Delay module.
* Added dspu::SimpleAutoGain module.
* Updated build scripts.
* Updated module versions in dependencies.

=== 1.0.18 ===