@@ -4,6 +4,7 @@
 
 === 1.0.25 ===
 * Bugfixes in shared memory catalog record validation.
+* Added dspu::Bypass::process_drywet method.
 
 === 1.0.24 ===
 * Updated build scripts.
